Feature/pf 16 (#4)
* Added ant build script

* Adding prod properties:

* Added oauth2 client key

* Added readme

* Added Dockerfile

* Wrote deployment script

* Got tests running from CLI

* Fixed Dockerfile bug

* Fixed broken unit tests

* Added more maven plugins

* Updated artifact id